@@ -38,6 +38,8 @@ image:doc/screenshots/feedbackMessages.png[Feedback messages,30%,30%]
 +
 There is an example of the `IFeedbackMessageService` interface usage in `DomainAttributeServices`.
 Note that in the end, the message list will be the only way to return info in payload, the single message will be removed.
+- https://github.com/eclipse-sirius/sirius-components/issues/2010[#2010] [diagram] Add a palette on node with the alternate diagram rendering.
+
 
 == v2023.6.0
 
@@ -128,7 +130,7 @@ Introducing providers interfaces to help creating view programmatically.
 Introducing a generator of builders aimed to help creating view programmatically, the generation makes use of emf-merge and modifications to these builders can be annotated to live during future regeneration. 
 
 - https://github.com/eclipse-sirius/sirius-components/issues/1912[#1912] [core] Add the possibility to send feedback messages to the frontend after an action.
-- https://github.com/eclipse-sirius/sirius-components/issues/1989[#1979] [diagram] Contribute a new way to render diagrams to evaluate an alternate layouting strategy
+- https://github.com/eclipse-sirius/sirius-components/issues/1989[#1989] [diagram] Contribute a new way to render diagrams to evaluate an alternate layouting strategy
 - https://github.com/eclipse-sirius/sirius-components/issues/1996[#1996] [explorer] Add an Expand All menu item contribution to the Explorer View.
 - https://github.com/eclipse-sirius/sirius-components/issues/1966[#1966] [view] Add Selection Description in the View DSL
 
